--- a/carsharing/mysite/carsharing/templates/carsharing/index.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/index.html
@@ -62,7 +62,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="index">Home</a></li>
               <li><a href="perfil">Perfil</a></li>
-              <li><a href="single-product">Single product</a></li>
+   
               <button onclick="location.href='{% url 'log-out'%}'">Log Out</button>
             </ul>
           </div>
@@ -99,6 +99,7 @@
 		  <input type="text" class="form-control"  placeholder="Search cars..." name="buscar" value="{{request.GET.buscar}}"/>
            	 <input type="submit" value="Search" />
 	</form> 
+<br />
 
            {% for i in oject_list %}
           <div class="col-md-3 col-sm-6">
@@ -119,7 +120,7 @@
                   data-product_sku=""
                   data-product_id="70"
                   rel="nofollow"
-                  href="single-product"
+                  href="{% url 'single-product' i.id %}"
                   >Rentar</a
                 >
               </div>
