Nav Var sin Single Product

--- a/carsharing/mysite/carsharing/templates/carsharing/single-product.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/single-product.html
@@ -180,7 +180,7 @@
                       </div>
                     </div>
 
-                    <a href="rent-a-car"
+                    <a href="{% url 'rent-a-car' %}"
                       ><button class="add_to_cart_button" type="submit">
                         Rentar
                       </button></a
