--- a/carsharing/mysite/carsharing/templates/carsharing/signIn.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/signIn.html
@@ -26,7 +26,7 @@
     <link href="{% static 'carsharing/css/main.css' %}" rel="stylesheet" media="all">
 </head>
 
-<body style="background-image: url('images/bg-02.jpg'); background-repeat: no-repeat; background-size: 100%;">
+<body>
     <div class="page-wrapper bg-gra-03 p-t-45 p-b-50">
         <div class="wrapper wrapper--w790">
             <div class="card card-5">
