--- a/carsharing/mysite/carsharing/templates/carsharing/profile.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/profile.html
@@ -111,9 +111,9 @@
                     <img src="{% static 'carsharing/images/auto_placeholder.jpg' %}" alt="" style="height: 200px;" />
                     {% endif %}
                   </div>
-                  <h2><a href="">{{vehiculo.0.marca}} {{vehiculo.0.modelo}}</a></h2>
+                  <h2><a href="/editar-vehicle?vehicle={{vehiculo.0.id}}">{{vehiculo.0.marca}} {{vehiculo.0.modelo}}</a></h2>
                   <div class="product-carousel-price">
-                    <ins>{{vehiculo.1.precio}} Bs/hora</ins>
+                    <ins>{{vehiculo.0.año}}</ins>
                   </div>
                 </div>
               </div>
