--- a/carsharing/mysite/carsharing/templates/carsharing/index.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/index.html
@@ -108,7 +108,7 @@
                    <img src="{{ i.foto.url }}" alt="" style="height: 200px;" />
 
               </div>
-              <h2><a href="">{{i.modelo}}</a></h2>
+              <h2><a href="">{{i.marca}} {{i.modelo}}</a></h2>
               <div class="product-carousel-price">
                 <ins>{{i.año}}</ins>
               </div>
