--- a/carsharing/mysite/carsharing/templates/carsharing/addCar.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/addCar.html
@@ -63,7 +63,7 @@
               <li><a href="index">Home</a></li>
               <li class="active"><a href="perfil">Perfil</a></li>
               <li>
-  
+                <button onclick="location.href='{% url 'log-out'%}'">Log Out</button>
               </li>
             </ul>
           </div>
