--- a/carsharing/mysite/carsharing/templates/carsharing/editar-vehicle.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/editar-vehicle.html
@@ -63,7 +63,7 @@
               <li><a href="index">Home</a></li>
               <li class="active"><a href="perfil">Perfil</a></li>
               <li>
-                <a href="single-product">Single product</a>
+                 <button onclick="location.href='{% url 'log-out'%}'">Log Out</button>
               </li>
             </ul>
           </div>
@@ -140,14 +140,28 @@
     <div class="row">
        <div class="col-md-12 col-sm-12">
                <input type="submit" value="Editar" style="font-size:20px;background-color:#63c439"/>
-         <input type="submit" value="Eliminar" style="font-size:20px;background-color:#a83232"/>
+
+       </div>
+
+    </div>
+  </div>
+</div>
+      </form>
+            <div class="container" style="padding-top:10px">
+  <div class="col">
+    <div class="row">
+       <div class="col-md-12 col-sm-12">
+              <form action="/perfil" method="post" enctype="multipart/form-data" style="align: center">
+          {% csrf_token %}
+                  {{formD.id}}
+             <input type="submit" value="Eliminar" style="font-size:20px;background-color:#a83232"/>
+         </form>
        </div>
 
     </div>
   </div>
 </div>
 
-      </form>
     </div>
 
     <div class="footer-top-area" style="height: 350px;">
