--- a/carsharing/mysite/carsharing/templates/carsharing/editar-vehicle.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/editar-vehicle.html
@@ -114,10 +114,13 @@
           <div class="col">
 
             <div class="row">
-
+ <div class="col-md-6 col-sm-6">
+                <h3 class="sidebar-title">Disponible</h3>
+                {{form.disponible}}
+              </div>
 
               <div class="col-md-6 col-sm-6">
-                <h3 class="sidebar-title">Precio por hora</h3>
+                <h3 class="sidebar-title">Precio Bs/hora</h3>
                 {{form.precio}}
               </div>
             </div>
