--- a/carsharing/mysite/carsharing/templates/carsharing/profile.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/profile.html
@@ -101,6 +101,7 @@
             </div>
             <h1>{{usuario.nombre}} {{usuario.apellido}}</h1>
             <div class="row">
+              <h3>Autos en Alquiler</h3>
               {% for vehiculo in vehiculos %}
               <div class="col-md-3 col-sm-6">
                 <div class="single-shop-product">
