--- a/carsharing/mysite/carsharing/templates/carsharing/rentAcar.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/rentAcar.html
@@ -44,9 +44,10 @@
                 </div> 
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="perfil">Perfil</a></li>
-                     
+                        <li><a href="/index">Home</a></li>
+                        <li><a href="/perfil">Perfil</a></li>
+                                     <button onclick="location.href='{% url 'log-out'%}'">Log Out</button>
+
                     </ul>
                 </div>  
             </div>
