--- a/carsharing/mysite/carsharing/templates/carsharing/single-product.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/single-product.html
@@ -60,10 +60,12 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li><a href="{% url 'index' %}">Home</a></li>
-              <li><a href="{% url 'perfil'%}">Perfil</a></li>
+              <li><a href="/index">Home</a></li>
+              <li><a href="/perfil">Perfil</a></li>
               <li class="active">
               </li>
+                              <button onclick="location.href='{% url 'log-out'%}'">Log Out</button>
+
             </ul>
           </div>
         </div>
