--- a/carsharing/mysite/carsharing/templates/carsharing/signIn.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/signIn.html
@@ -13,17 +13,17 @@
     <title>Registro</title>
 
     <!-- Icons font CSS-->
-    <link href="{% static 'carsharing/vendor/mdi-font/css/material-design-iconic-font.min.css' %}" rel="stylesheet" media="all">
-    <link href="{% static 'carsharing/vendor/font-awesome-4.7/css/font-awesome.min.css' %}" rel="stylesheet" media="all">
+    <link href="../../static/carsharing/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
+    <link href="../../static/carsharing/vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
     <!-- Font special for pages-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
 
     <!-- Vendor CSS-->
-    <link href="{% static 'carsharing/vendor/select2/select2.min.css' %}" rel="stylesheet" media="all">
-    <link href="{% static 'carsharing/vendor/datepicker/daterangepicker.css' %}" rel="stylesheet" media="all">
+    <link href="../../static/carsharing/vendor/select2/select2.min.css" rel="stylesheet" media="all">
+    <link href="../../static/carsharing/vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
 
     <!-- Main CSS-->
-    <link href="{% static 'carsharing/css/main.css' %}" rel="stylesheet" media="all">
+    <link href="../../static/carsharing/css/main.css" rel="stylesheet" media="all">
 </head>
 
 <body>
