--- a/carsharing/mysite/carsharing/templates/carsharing/single-product.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/single-product.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Product Page - Ustora Demo</title>
+    <title>Vehiculo</title>
 
     <!-- Google Fonts -->
     <link
@@ -144,6 +144,8 @@
                           <p>
                            {{vehiculo.descripcion}}
                           </p>
+                          <h5>Contacto:</h5>
+                          <p>{{contacto.contacto}}</p>
                         </div>
                         <div role="tabpanel" class="tab-pane fade" id="profile">
                           <h2>Reviews</h2>
