--- a/carsharing/mysite/carsharing/templates/carsharing/single-product.html
+++ b/carsharing/mysite/carsharing/templates/carsharing/single-product.html
@@ -144,6 +144,8 @@
                           <p>
                            {{vehiculo.descripcion}}
                           </p>
+                          <h5>Ciudad:</h5>
+                          <p>{{vehiculo.ciudad}}</p>
                           <h5>Contacto:</h5>
                           <p>{{contacto.contacto}}</p>
                         </div>
